--- a/index.html
+++ b/index.html
@@ -37,13 +37,16 @@
             </div>
           </nav>
           <div class="menu">
-            <h2 class="title_menu">Menú</h2>
+            <div class="content_menu">
+              <h2 class="title_menu">Menú</h2>
             <ul class="ul_manu">
               <li class="li_menu" ><a href="#">Enlace 1</a></li>
               <li class="li_menu"><a href="#">Enlace 2</a></li>
               <li class="li_menu"><a href="#">Enlace 2</a></li>
               <li class="li_menu"><a href="#">Enlace 2</a></li>
             </ul>
+            <p class="copy_menu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo laudantium enim dicta iure incidunt qui, fugit repellendus provident dolor, ipsa commodi aliquam quibusdam obcaecati dolorum itaque adipisci repudiandae sed rem magnam perferendis veritatis reprehenderit reiciendis nobis. Quae ipsam tempora illo.</p>
+            </div>
           </div>
         </header> 
 
@@ -366,10 +369,10 @@
         </div>
         
       </section> -->
-      <!-- <section id="section-5">
+      <section id="section-5">
         <h3 class="title">Con nosotros, son solo tres simples pasos</h3>
         <div class="pasosContainer">
-          <div class="pasos" data-aos="fade-up" data-aos-duration="2000">
+          <div class="pasos" data-aos="fade-up" data-aos-duration="3000">
             <div class="paso">
               <h5 class="pasoN">1</h5>
             </div>
@@ -378,7 +381,7 @@
               asesoraremos
             </p>
           </div>
-          <div class="pasos" data-aos="fade-up" data-aos-duration="2000">
+          <div class="pasos" data-aos="fade-up" data-aos-duration="3000">
             <div class="paso">
               <h5 class="pasoN">2</h5>
             </div>
@@ -386,7 +389,7 @@
               Acordarmos un presupuesto e iniciamos tu proyecto
             </p>
           </div>
-          <div class="pasos" data-aos="fade-up" data-aos-duration="2000">
+          <div class="pasos" data-aos="fade-up" data-aos-duration="3000">
             <div class="paso">
               <h5 class="pasoN">3</h5>
             </div>
@@ -394,34 +397,8 @@
               Lanzamos tu pyme al mundo utilizando la mejor tecnologia
             </p>
           </div>
-          <div class="form" data-aos="zoom-in" data-aos-duration="2000">
-            <span class="form__title">Contacto</span>
-            <form action="">
-              <div class="form__input">
-                <i class="ri-user-line"></i>
-                <input type="text" placeholder="Nombre" />
-                <span class="bar"></span>
-              </div>
-              <div class="form__input">
-                <i class="ri-mail-line"></i>
-                <input type="text" placeholder="Email" />
-                <span class="bar"></span>
-              </div>
-              <div class="form__input">
-                <i class="ri-phone-line"></i>
-                <input type="text" placeholder="Telefono" />
-                <span class="bar"></span>
-              </div>
-              <a href="/reservas.html" type="submit" class="form__button"
-                >Enviar</a
-              >
-              <span class="form__switch">
-                Hubo un problema? <a href="#">Ayuda</a>
-              </span>
-            </form>
-          </div>
         </div>
-      </section> -->
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__container">
