--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <p class="text">
                       <span class="text__active">Servicios</span> que se adaptan a<span class="text__active"><br>tus</span> necesidades
                     </p>
-                    <a href="/nosotros.html" class="cta">Nuestros servicios</a>
+                    <a href="/wrapper.html" class="cta">Nuestros servicios</a>
                 </div>
               </div>
               </div>
