--- a/wrapper.html
+++ b/wrapper.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"/>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <title>Veertien | Desarrollo web y ciencia de datos</title>
-  <link  rel="icon" href="/img/svg/faviconRecurso 42.svg" type="image/svg+xml"/>
+  <link  rel="icon" href="/img/logo/Recurso 27.svg" type="image/svg+xml"/>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet"/>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
@@ -21,7 +21,7 @@
 <body>
   <nav id="nav" class="scrollmagic">
     <div class="logo" id="logo1">
-      <a href="index.html"><img src="/img/logo/logoblanco.svg" alt="" class="logo_nav"></a>
+      <a href="index.html"><img src="/img/logo/Recurso 34.svg" alt="" class="logo_nav"></a>
     </div>
     <div class="menu-toggle" data-js="menu-toggle">
       <div class="hamburger">
@@ -53,7 +53,7 @@
             <header>
               <div class="container_wrapper">
                 <div class="wrapper"></div>
-             <img class="logo_wrapper" src="/logoblanco.svg" alt="">
+             <img class="logo_wrapper" src="/img/logo/Recurso 30.svg" alt="">
             </div>
             </header>
       
